creeated a jpg generator

--- a/npy_generator.ipynb
+++ b/npy_generator.ipynb
@@ -2126,13 +2126,13 @@
     "            if len(shapes) == 5:\n",
     "                # Generate map and write to file\n",
     "                map_array = create_map(width, height, shapes)\n",
-    "                np.save(os.path.join(output_folder, f'map_{map_count}.npy'), map_array)\n",
+    "                np.save(os.path.join(output_folder, f'map_{map_count}.jpg'), map_array)\n",
     "                shapes = []  # Reset shapes for the next set of rows\n",
     "                map_count += 1\n",
     "\n",
     "# Define input CSV file and output folder\n",
     "csv_file = r\"C:\\Users\\sachi\\Planning\\Deep_RRT\\shapes.csv\"\n",
-    "output_folder = r\"C:\\Users\\sachi\\Planning\\Deep_RRT\\Maps\"\n",
+    "output_folder = r\"C:\\Users\\sachi\\Planning\\Deep_RRT\\Maps2\"\n",
     "\n",
     "# Define map dimensions\n",
     "width = 1200\n",
