made changes to data creator

--- a/MPNet/DeepRRT.ipynb
+++ b/MPNet/DeepRRT.ipynb
@@ -1932,7 +1932,93 @@
     "    writer.writerows(points)\n",
     "    print(\"writing\")\n",
     "\n",
-    "print(f\"Successfully generated {m} random start and goal points for {n} images and saved them to {csv_file}.\")\n"
+    "print(f\"Successfully generated {m} start and goal points for {n} images and saved them to {csv_file}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f8cc08",
+   "metadata": {},
+   "source": [
+    "Extract Files in series and write random start and goal points for each image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "579014a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing\n",
+      "Successfully generated 5 start and goal points for each image and saved them to C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import csv\n",
+    "import random\n",
+    "\n",
+    "# Set the path to the images folder\n",
+    "images_folder = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\images\"\n",
+    "\n",
+    "# Set the number of random start and goal points to generate\n",
+    "m = \n",
+    "\n",
+    "# Create a list to store the start and goal points\n",
+    "points = []\n",
+    "\n",
+    "def get_random_point(img):\n",
+    "    # Generate random x and y coordinates\n",
+    "    start_x = random.randint(0, width - 10)\n",
+    "    start_y = random.randint(0, height - 10)\n",
+    "    goal_x = random.randint(0, width - 10)\n",
+    "    goal_y = random.randint(0, height - 10)\n",
+    "    return start_x, start_y, goal_x, goal_y\n",
+    "\n",
+    "# Get the list of image file names in the images folder\n",
+    "image_paths = [os.path.join(images_folder, filename) for filename in os.listdir(images_folder) if filename.endswith('.jpg') or filename.endswith('.png')]\n",
+    "\n",
+    "# Iterate over the image paths\n",
+    "for image_path in image_paths:\n",
+    "    # Read the image\n",
+    "    img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+    "    \n",
+    "    # Get the height and width of the image\n",
+    "    height, width = img.shape\n",
+    "\n",
+    "    # Generate m random start and goal points\n",
+    "    for _ in range(m):\n",
+    "\n",
+    "        # Get random start and goal points\n",
+    "        start_x, start_y, goal_x, goal_y = get_random_point(img)\n",
+    "\n",
+    "        # Continue sampling until both start and goal points are white (255)\n",
+    "        while img[start_y, start_x] != 255 or img[goal_y, goal_x] != 255:\n",
+    "            start_x, start_y, goal_x, goal_y = get_random_point(img)\n",
+    "\n",
+    "        file_name = os.path.basename(image_path)\n",
+    "\n",
+    "        # Append the start and goal points to the list\n",
+    "        points.append([start_x, start_y, goal_x, goal_y, file_name[:-4]])\n",
+    "\n",
+    "# Set the path to the CSV file\n",
+    "csv_file = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv\"\n",
+    "\n",
+    "# Write the start and goal points to the CSV file\n",
+    "with open(csv_file, 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['startx', 'starty', 'goalx', 'goaly', 'imagenumber'])\n",
+    "    writer.writerows(points)\n",
+    "    print(\"writing\")\n",
+    "\n",
+    "print(f\"Successfully generated {m} start and goal points for each image and saved them to {csv_file}.\")\n"
    ]
   },
   {
