Made changes to data creator

--- a/MPNet/start_goal_point_generator.ipynb
+++ b/MPNet/start_goal_point_generator.ipynb
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "311efdbe",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1438,7 @@
      "output_type": "stream",
      "text": [
       "writing\n",
-      "Successfully generated 5 random start and goal points for 10 images and saved them to C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv.\n"
+      "Successfully generated 200 start and goal points for 200 images and saved them to C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv.\n"
      ]
     }
    ],
@@ -1454,10 +1454,10 @@
     "images_folder = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\images\"\n",
     "\n",
     "# Set the number of images to load\n",
-    "n = 10\n",
+    "n = 200\n",
     "\n",
     "# Set the number of random start and goal points to generate\n",
-    "m = 5\n",
+    "m = 200\n",
     "\n",
     "# Create a list to store the image paths\n",
     "image_paths = []\n",
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "579014a2",
    "metadata": {},
    "outputs": [
@@ -1541,7 +1541,7 @@
      "output_type": "stream",
      "text": [
       "writing\n",
-      "Successfully generated 5 start and goal points for each image and saved them to C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv.\n"
+      "Successfully generated 200 start and goal points for each image and saved them to C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\start_goal_points_images.csv.\n"
      ]
     }
    ],
@@ -1556,7 +1556,7 @@
     "images_folder = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\images\"\n",
     "\n",
     "# Set the number of random start and goal points to generate\n",
-    "m = 4000\n",
+    "m = 200\n",
     "\n",
     "# Create a list to store the start and goal points\n",
     "points = []\n",
