--- a/MPNet/training_data_creator_nav.ipynb
+++ b/MPNet/training_data_creator_nav.ipynb
@@ -424,6 +424,152 @@
       "path  70 for image  0\n",
       "Goal Cost:  [10000, 57.9552249916852]\n",
       "0\n",
+      "0\n",
+      "path  71 for image  0\n",
+      "Goal Cost:  [10000, 9.219544457292887]\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "path  72 for image  0\n",
+      "Goal Cost:  [10000, 27.414018573538556]\n",
+      "0\n",
+      "path  73 for image  0\n",
+      "Goal Cost:  [10000, 52.68074398488838]\n",
+      "0\n",
+      "path  74 for image  0\n",
+      "Goal Cost:  [10000, 26.579874403565086]\n",
+      "0\n",
+      "path  75 for image  0\n",
+      "Goal Cost:  [10000, 166.8790694629307]\n",
+      "0\n",
+      "path  76 for image  0\n",
+      "Goal Cost:  [10000, 44.043866504704596]\n",
+      "0\n",
+      "path  77 for image  0\n",
+      "Goal Cost:  [10000, 57.531340673202706]\n",
+      "0\n",
+      "path  78 for image  0\n",
+      "Goal Cost:  [10000, 187.13047153658047]\n",
+      "0\n",
+      "path  79 for image  0\n",
+      "Goal Cost:  [10000, 73.6454118165926]\n",
+      "0\n",
+      "0\n",
+      "path  80 for image  0\n",
+      "Goal Cost:  [10000, 82.68787460863834]\n",
+      "0\n",
+      "0\n",
+      "path  81 for image  0\n",
+      "Goal Cost:  [10000, 21.06291013120076]\n",
+      "0\n",
+      "0\n",
+      "path  82 for image  0\n",
+      "Goal Cost:  [10000, 26.2703217109681]\n",
+      "0\n",
+      "path  83 for image  0\n",
+      "Goal Cost:  [10000, 242.7779732822338]\n",
+      "0\n",
+      "path  84 for image  0\n",
+      "Goal Cost:  [10000, 147.1493050873438]\n",
+      "0\n",
+      "path  85 for image  0\n",
+      "Goal Cost:  [10000, 47.32159253054128]\n",
+      "0\n",
+      "path  86 for image  0\n",
+      "Goal Cost:  [10000, 197.0042756339876]\n",
+      "0\n",
+      "path  87 for image  0\n",
+      "Goal Cost:  [10000, 175.49050104443498]\n",
+      "0\n",
+      "path  88 for image  0\n",
+      "Goal Cost:  [10000, 53.602584476284306]\n",
+      "0\n",
+      "path  89 for image  0\n",
+      "Goal Cost:  [10000, 95.82457317507641]\n",
+      "0\n",
+      "path  90 for image  0\n",
+      "Goal Cost:  [10000, 194.30019306916833]\n",
+      "0\n",
+      "path  91 for image  0\n",
+      "Goal Cost:  [10000, 92.19111400069363]\n",
+      "0\n",
+      "path  92 for image  0\n",
+      "Goal Cost:  [10000, 93.2260589317382]\n",
+      "0\n",
+      "path  93 for image  0\n",
+      "Goal Cost:  [10000, 81.8242930821806]\n",
+      "0\n",
+      "path  94 for image  0\n",
+      "Goal Cost:  [10000, 0]\n",
+      "0\n",
+      "path  95 for image  0\n",
+      "Goal Cost:  [10000, 66.33996873408778]\n",
+      "0\n",
+      "path  96 for image  0\n",
+      "Goal Cost:  [10000, 66.0232219152202]\n",
+      "0\n",
+      "path  97 for image  0\n",
+      "Goal Cost:  [10000, 120.97565547724818]\n",
+      "0\n",
+      "path  98 for image  0\n",
+      "Goal Cost:  [10000, 159.37073512487763]\n",
+      "0\n",
+      "path  99 for image  0\n",
+      "Goal Cost:  [10000, 41.91614602173509]\n",
+      "0\n",
+      "path  100 for image  0\n",
+      "Goal Cost:  [10000, 82.57264112807238]\n",
+      "0\n",
+      "path  101 for image  0\n",
+      "Goal Cost:  [10000, 103.56450641593194]\n",
+      "0\n",
+      "path  102 for image  0\n",
+      "Goal Cost:  [10000, 114.62792481982005]\n",
+      "0\n",
+      "path  103 for image  0\n",
+      "Goal Cost:  [10000, 26.752156369927675]\n",
+      "0\n",
+      "path  104 for image  0\n",
+      "Goal Cost:  [10000, 136.57282928091476]\n",
+      "0\n",
+      "path  105 for image  0\n",
+      "Goal Cost:  [10000, 114.30586979724944]\n",
+      "0\n",
+      "path  106 for image  0\n",
+      "Goal Cost:  [10000, 38.53576011968595]\n",
+      "0\n",
+      "path  107 for image  0\n",
+      "Goal Cost:  [10000, 53.098132104451295]\n",
+      "0\n",
+      "path  108 for image  0\n",
+      "Goal Cost:  [10000, 60.36224539095442]\n",
+      "0\n",
+      "path  109 for image  0\n",
+      "Goal Cost:  [10000, 104.46520632997431]\n",
+      "0\n",
+      "path  110 for image  0\n",
+      "Goal Cost:  [10000, 77.2929524804263]\n",
+      "0\n",
+      "path  111 for image  0\n",
+      "Goal Cost:  [10000, 240.4038779813808]\n",
+      "0\n",
+      "path  112 for image  0\n",
+      "Goal Cost:  [10000, 85.78916471035177]\n",
+      "0\n",
+      "path  113 for image  0\n",
+      "Goal Cost:  [10000, 69.91153540929002]\n",
+      "0\n",
+      "path  114 for image  0\n",
+      "Goal Cost:  [10000, 15.073881470049038]\n",
+      "0\n",
+      "path  115 for image  0\n",
+      "Goal Cost:  [10000, 20.192126260342526]\n",
+      "0\n",
+      "path  116 for image  0\n",
+      "Goal Cost:  [10000, 69.05255576126721]\n",
+      "0\n",
+      "path  117 for image  0\n",
+      "Goal Cost:  [10000, 86.26234671069292]\n",
       "0\n"
      ]
     }
