updated output.csv to eradicate irrelevant lines

--- a/data_amend/asas.ipynb
+++ b/data_amend/asas.ipynb
@@ -137,28 +137,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "This code is related to deleting places where start_index appear equal to goal_index in output file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "0\n",
+      "287930\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import csv\n",
     "output_file = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\output.csv\"\n",
+    "temp_output_file = r\"C:\\Users\\sachi\\Planning\\Deep-RRT-Star-Implementation\\temp_output.csv\"\n",
     "path_counts2 = {}\n",
     "path_count2 = 0\n",
     "temp2 = 0\n",
+    "total_faulty_paths = 0\n",
+    "line = 1\n",
+    "# with open(output_file, 'r') as file2, open(temp_output_file, 'w', newline='') as temp_file:\n",
     "with open(output_file, 'r') as file2:\n",
     "    reader = csv.reader(file2)\n",
+    "    # temp_writer = csv.writer(temp_file)\n",
+    "    # if temp_file.tell() == 0:\n",
+    "    #     temp_writer.writerow(['startx', 'starty', 'goalx', 'goaly', 'image_number'])\n",
+    "    # lines = list(reader)\n",
     "    for row in reader:\n",
     "        if row[-1] == 'image_number':\n",
     "            continue\n",
-    "        if len(row) == 5:\n",
+    "        line += 1\n",
+    "        if len(row) == 5 and row[2] == row[3]:\n",
     "            environment_number2 = int(row[-1])\n",
     "            path_count2 += 1\n",
-    "            path_counts2[environment_number] = path_count\n",
+    "            path_counts2[environment_number2] = path_count2\n",
     "            if temp2 != environment_number2:\n",
     "                path_count2 = 0\n",
     "            temp2 = environment_number2\n",
-    "            if row[-1] == "
+    "            total_faulty_paths += 1\n",
+    "            print(row, line)\n",
+    "        # else:\n",
+    "        #     temp_writer.writerow(row)\n",
+    "            \n",
+    "print(path_counts2)\n",
+    "print(total_faulty_paths)\n",
+    "print(line)"
    ]
   }
  ],
