--- a/data_amend/asas.ipynb
+++ b/data_amend/asas.ipynb
@@ -1,15 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This line writes how many paths have been generated for every environment"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 177, 1: 174, 10: 176, 100: 98, 101: 104, 102: 129, 103: 186, 104: 165, 105: 177, 106: 153, 107: 118, 108: 167, 109: 94, 11: 183, 110: 174, 111: 173, 112: 169, 113: 75, 114: 187, 115: 157, 116: 157, 117: 162, 118: 83, 119: 188, 12: 162, 120: 169, 121: 86, 122: 185, 123: 158, 124: 151, 125: 183, 126: 179, 127: 163, 128: 183, 129: 159, 13: 176, 130: 31, 131: 172, 132: 175, 133: 113, 134: 127, 135: 72, 136: 185, 137: 73, 138: 166, 139: 101, 14: 172, 140: 173, 141: 98, 142: 94, 143: 186, 144: 170, 145: 183, 146: 116, 147: 191, 148: 83, 149: 188, 15: 149, 150: 186, 151: 192, 152: 174, 153: 174, 154: 182, 155: 186, 156: 186, 157: 179, 158: 177, 159: 157, 16: 183, 160: 185, 161: 105, 162: 178, 163: 182, 164: 183, 165: 63, 166: 117, 167: 156, 168: 186, 169: 174, 17: 162, 170: 140, 171: 101, 172: 182, 173: 155, 174: 96, 175: 180, 176: 140, 177: 186, 178: 180, 179: 176, 18: 172, 180: 183, 181: 64, 182: 184, 183: 172, 184: 182, 185: 168, 186: 182, 187: 175, 188: 88, 189: 1}\n"
+      "{0: 192, 1: 193, 10: 193, 100: 129, 101: 151, 102: 182, 103: 195, 104: 184, 105: 198, 106: 181, 107: 166, 108: 192, 109: 150, 11: 188, 110: 193, 111: 189, 112: 189, 113: 124, 114: 193, 115: 186, 116: 188, 117: 193, 118: 128, 119: 196, 12: 186, 120: 190, 121: 138, 122: 197, 123: 182, 124: 190, 125: 192, 126: 189, 127: 186, 128: 198, 129: 189, 13: 195, 130: 78, 131: 189, 132: 196, 133: 142, 134: 164, 135: 105, 136: 190, 137: 118, 138: 188, 139: 145, 14: 193, 140: 188, 141: 161, 142: 135, 143: 196, 144: 191, 145: 197, 146: 176, 147: 195, 148: 125, 149: 196, 15: 179, 150: 197, 151: 192, 152: 193, 153: 193, 154: 198, 155: 197, 156: 195, 157: 195, 158: 193, 159: 184, 16: 198, 160: 198, 161: 155, 162: 197, 163: 194, 164: 193, 165: 94, 166: 155, 167: 193, 168: 194, 169: 195, 17: 192, 170: 172, 171: 141, 172: 192, 173: 188, 174: 142, 175: 192, 176: 177, 177: 193, 178: 196, 179: 197, 18: 191, 180: 199, 181: 97, 182: 193, 183: 194, 184: 197, 185: 193, 186: 198, 187: 196, 188: 128, 189: 109}\n"
      ]
     }
    ],
@@ -45,6 +52,13 @@
     "print(path_counts)\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These lines of code write new start goal examples required to be added in output.csv"
    ]
   },
   {
