--- a/MPNet/Data_loader.ipynb
+++ b/MPNet/Data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "c385cddf",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,13 @@
     "import os\n",
     "import pickle\n",
     "from torch.autograd import Variable \n",
-    "import math"
+    "import math\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "f6c6c246",
    "metadata": {},
    "outputs": [
@@ -43,26 +44,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "305295\n",
-      "35.0\n",
-      "62.0\n",
-      "101.0\n",
-      "113.0\n",
-      "134.0\n",
-      "141.0\n",
-      "162.0\n",
-      "nan\n"
+      "101\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "cannot convert float NaN to integer",
+     "ename": "RuntimeError",
+     "evalue": "Attempting to deserialize object on a CUDA device but torch.cuda.is_available() is False. If you are running on a CPU-only machine, please use torch.load with map_location=torch.device('cpu') to map your storages to the CPU.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 209\u001b[0m\n\u001b[1;32m    207\u001b[0m index1 \u001b[38;5;241m=\u001b[39m index_goal \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    208\u001b[0m \u001b[38;5;28mprint\u001b[39m(index_goal)\n\u001b[0;32m--> 209\u001b[0m index1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mindex1\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    210\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (image_number \u001b[38;5;241m==\u001b[39m prev_image_number):\n\u001b[1;32m    211\u001b[0m     index3 \u001b[38;5;241m=\u001b[39m index3 \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 245\u001b[0m\n\u001b[1;32m    242\u001b[0m X \u001b[38;5;241m=\u001b[39m example\u001b[38;5;241m.\u001b[39miloc[:, :\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m    243\u001b[0m X \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mfit_transform(X)\n\u001b[0;32m--> 245\u001b[0m dataset , targets \u001b[38;5;241m=\u001b[39m \u001b[43mdata_loader\u001b[49m\u001b[43m(\u001b[49m\u001b[43menvironment_list\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m101\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m201\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    248\u001b[0m \u001b[38;5;66;03m# print(max_length)\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[41], line 57\u001b[0m, in \u001b[0;36mdata_loader\u001b[0;34m(environment_list, N, NP)\u001b[0m\n\u001b[1;32m     55\u001b[0m autoencoder \u001b[38;5;241m=\u001b[39m Autoencoder()\n\u001b[1;32m     56\u001b[0m Q \u001b[38;5;241m=\u001b[39m autoencoder\u001b[38;5;241m.\u001b[39mencoder\n\u001b[0;32m---> 57\u001b[0m Q\u001b[38;5;241m.\u001b[39mload_state_dict(\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/sj/Deep-RRT-Star-Implementation/weights/cae_encoder2.pkl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available():\n\u001b[1;32m     59\u001b[0m     Q \u001b[38;5;241m=\u001b[39m Q\u001b[38;5;241m.\u001b[39mto(torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:594\u001b[0m, in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001b[0m\n\u001b[1;32m    592\u001b[0m             opened_file\u001b[38;5;241m.\u001b[39mseek(orig_position)\n\u001b[1;32m    593\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mjit\u001b[38;5;241m.\u001b[39mload(opened_file)\n\u001b[0;32m--> 594\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43mopened_zipfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmap_location\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpickle_module\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mpickle_load_args\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    595\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m _legacy_load(opened_file, map_location, pickle_module, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:853\u001b[0m, in \u001b[0;36m_load\u001b[0;34m(zip_file, map_location, pickle_module, pickle_file, **pickle_load_args)\u001b[0m\n\u001b[1;32m    851\u001b[0m unpickler \u001b[38;5;241m=\u001b[39m pickle_module\u001b[38;5;241m.\u001b[39mUnpickler(data_file, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mpickle_load_args)\n\u001b[1;32m    852\u001b[0m unpickler\u001b[38;5;241m.\u001b[39mpersistent_load \u001b[38;5;241m=\u001b[39m persistent_load\n\u001b[0;32m--> 853\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43munpickler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    855\u001b[0m torch\u001b[38;5;241m.\u001b[39m_utils\u001b[38;5;241m.\u001b[39m_validate_loaded_sparse_tensors()\n\u001b[1;32m    857\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:845\u001b[0m, in \u001b[0;36m_load.<locals>.persistent_load\u001b[0;34m(saved_id)\u001b[0m\n\u001b[1;32m    843\u001b[0m data_type, key, location, size \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m    844\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m loaded_storages:\n\u001b[0;32m--> 845\u001b[0m     \u001b[43mload_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_type\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_maybe_decode_ascii\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlocation\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    846\u001b[0m storage \u001b[38;5;241m=\u001b[39m loaded_storages[key]\n\u001b[1;32m    847\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m storage\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:834\u001b[0m, in \u001b[0;36m_load.<locals>.load_tensor\u001b[0;34m(data_type, size, key, location)\u001b[0m\n\u001b[1;32m    831\u001b[0m dtype \u001b[38;5;241m=\u001b[39m data_type(\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mdtype\n\u001b[1;32m    833\u001b[0m storage \u001b[38;5;241m=\u001b[39m zip_file\u001b[38;5;241m.\u001b[39mget_storage_from_record(name, size, dtype)\u001b[38;5;241m.\u001b[39mstorage()\n\u001b[0;32m--> 834\u001b[0m loaded_storages[key] \u001b[38;5;241m=\u001b[39m \u001b[43mrestore_location\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstorage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlocation\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:175\u001b[0m, in \u001b[0;36mdefault_restore_location\u001b[0;34m(storage, location)\u001b[0m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdefault_restore_location\u001b[39m(storage, location):\n\u001b[1;32m    174\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m _, _, fn \u001b[38;5;129;01min\u001b[39;00m _package_registry:\n\u001b[0;32m--> 175\u001b[0m         result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstorage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlocation\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    176\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    177\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:151\u001b[0m, in \u001b[0;36m_cuda_deserialize\u001b[0;34m(obj, location)\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_cuda_deserialize\u001b[39m(obj, location):\n\u001b[1;32m    150\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m location\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m--> 151\u001b[0m         device \u001b[38;5;241m=\u001b[39m \u001b[43mvalidate_cuda_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlocation\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    152\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(obj, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_torch_load_uninitialized\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    153\u001b[0m             storage_type \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39mcuda, \u001b[38;5;28mtype\u001b[39m(obj)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.8/site-packages/torch/serialization.py:135\u001b[0m, in \u001b[0;36mvalidate_cuda_device\u001b[0;34m(location)\u001b[0m\n\u001b[1;32m    132\u001b[0m device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39m_utils\u001b[38;5;241m.\u001b[39m_get_device_index(location, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    134\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available():\n\u001b[0;32m--> 135\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAttempting to deserialize object on a CUDA \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    136\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdevice but torch.cuda.is_available() is False. \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    137\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIf you are running on a CPU-only machine, \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    138\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplease use torch.load with map_location=torch.device(\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[38;5;124m) \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    139\u001b[0m                        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mto map your storages to the CPU.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    140\u001b[0m device_count \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice_count()\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m device \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m device_count:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Attempting to deserialize object on a CUDA device but torch.cuda.is_available() is False. If you are running on a CPU-only machine, please use torch.load with map_location=torch.device('cpu') to map your storages to the CPU."
      ]
     }
    ],
@@ -134,7 +135,7 @@
     "#         print('env')\n",
     "#         print(env)\n",
     "#         print(image_number)\n",
-    "        image= cv2.imread(f'C:/Users/Navdeep/Downloads/images/images/{env}.jpg' , cv2.IMREAD_GRAYSCALE)\n",
+    "        image= cv2.imread(f'/home/sj/Deep-RRT-Star-Implementation/images/{env}.jpg' , cv2.IMREAD_GRAYSCALE)\n",
     "        to_tensor = transforms.ToTensor()\n",
     "        torch_img = to_tensor(image)\n",
     "        if torch.cuda.is_available():\n",
@@ -148,7 +149,7 @@
     "        index = index + 1\n",
     "    \n",
     "    \n",
-    "    file_path = r\"/home/sj/Deep-RRT-Star-Implementation/output.csv/output.csv\"\n",
+    "    file_path = r\"/home/sj/Deep-RRT-Star-Implementation/output.csv\"\n",
     "    dtypes = {col: 'float32' for col in pd.read_csv(file_path, nrows=1).columns}\n",
     "    example = pd.read_csv(file_path, dtype=dtypes)\n",
     "    #print(len(example))\n",
@@ -201,16 +202,19 @@
     "    prev_image_number = 0\n",
     "    while(index < len(example)) :\n",
     "        row = example.iloc[index]\n",
-    "        index_start = int(row['index_start'])\n",
-    "        index_goal = int(row['index_goal'])\n",
-    "        image_number = row['image_number']\n",
+    "        # index_start = int(row['index_start'])\n",
+    "        # index_goal = int(row['index_goal'])\n",
+    "        index_start = X[index][0]\n",
+    "        image_number = X[index][1]\n",
     "        index = index_goal + 1\n",
     "        if (image_number == prev_image_number):\n",
     "            index3 = 0\n",
     "            for i in range(index_start , index_goal + 1):\n",
     "                row = example.iloc[i]\n",
-    "                x = row['current_x']\n",
-    "                y = row['current_y']\n",
+    "                # x = row['current_x']\n",
+    "                # y = row['current_y']\n",
+    "                x = X[i][0]\n",
+    "                y = X[i][1]\n",
     "                #print([x , y])\n",
     "                paths[index1][index2][index3] = [x , y]\n",
     "                #paths[index1][index2][index3][1] = y\n",
@@ -222,8 +226,10 @@
     "            index3 = 0\n",
     "            for i in range(index_start , index_goal + 1):\n",
     "                row = example.iloc[i]\n",
-    "                x = row['current_x']\n",
-    "                y = row['current_y']\n",
+    "                # x = row['current_x']\n",
+    "                # y = row['current_y']\n",
+    "                x = X[i][0]\n",
+    "                y = X[i][1]\n",
     "                #print([x , y])\n",
     "                paths[index1][index2][index3] = [x , y]\n",
     "                #paths[index1][index2][index3][1] = y\n",
@@ -261,28 +267,51 @@
     "    \n",
     "    \n",
     "file_path = r\"/home/sj/Deep-RRT-Star-Implementation/output.csv\"\n",
+    "# dtypes = {col: 'float32' for col in pd.read_csv(file_path, nrows=1).columns}\n",
+    "# example = pd.read_csv(file_path, dtype=dtypes)\n",
+    "# index1 = 0\n",
+    "# index3 = 1\n",
+    "# prev_image_number = 0\n",
+    "# environment_list = [0]\n",
+    "# print(len(example))\n",
+    "# while index1 < len(example) :\n",
+    "#     row = example.iloc[index1]\n",
+    "#     index_start = row['index_start']\n",
+    "#     index_goal = row['index_goal']\n",
+    "#     image_number = row['image_number']\n",
+    "#     index1 = index_goal + 1\n",
+    "#     print(index_goal)\n",
+    "#     index1 = int(index1)\n",
+    "#     if (image_number == prev_image_number):\n",
+    "#         index3 = index3 + 1\n",
+    "#     else :\n",
+    "#         environment_list.append(prev_image_number)\n",
+    "#         index3 = 1\n",
+    "#         prev_image_number = image_number\n",
+    "#         index3 = index3 + 1\n",
+    "\n",
+    "with open(file_path, 'r') as file2:\n",
+    "    prev_image_number = 0\n",
+    "    environment_list = [0]\n",
+    "    reader = csv.reader(file2)\n",
+    "    for row in reader:\n",
+    "        if row[-1] == 'image_number':\n",
+    "            continue\n",
+    "        if len(row)==5:\n",
+    "            environment_number =  int(row[-1])\n",
+    "            if environment_number != prev_image_number:\n",
+    "                environment_list.append(environment_number)\n",
+    "                prev_image_number = environment_number\n",
+    "print(len(environment_list))\n",
+    "\n",
     "dtypes = {col: 'float32' for col in pd.read_csv(file_path, nrows=1).columns}\n",
     "example = pd.read_csv(file_path, dtype=dtypes)\n",
-    "index1 = 0\n",
-    "index3 = 1\n",
-    "prev_image_number = 0\n",
-    "environment_list = [0]\n",
-    "print(len(example))\n",
-    "while index1 < len(example) :\n",
-    "    row = example.iloc[index1]\n",
-    "    index_start = row['index_start']\n",
-    "    index_goal = row['index_goal']\n",
-    "    image_number = row['image_number']\n",
-    "    index1 = index_goal + 1\n",
-    "    print(index_goal)\n",
-    "    index1 = int(index1)\n",
-    "    if (image_number == prev_image_number):\n",
-    "        index3 = index3 + 1\n",
-    "    else :\n",
-    "        environment_list.append(prev_image_number)\n",
-    "        index3 = 1\n",
-    "        prev_image_number = image_number\n",
-    "        index3 = index3 + 1\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "X = example.iloc[:, :2].values\n",
+    "X = sc.fit_transform(X)\n",
+    "\n",
     "dataset , targets = data_loader(environment_list,101,201)\n",
     "\n",
     "\n",
@@ -319,8 +348,6 @@
     "\t\tnn.Linear(64, 32),nn.PReLU(),\n",
     "\t\tnn.Linear(32, output_size))\n",
     "        \n",
-    "        \n",
-    "\n",
     "\n",
     "    def forward(self, x):\n",
     "        out = self.fc(x)\n",
